# BitSqueeze-LLM

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run_all_test.sh
cmake/: bitsqz_llmConfig.cmake.in
examples/: CMakeLists.txt  bitsqz_llm_walkthrough.cpp
include/: bitsqz_llm.hpp
legacy_modules/quantization/: CMakeLists.txt
legacy_modules/quantization/include/quantization/: quantization.hpp
legacy_modules/quantization/include/quantization/datatype/fp16/: bitcasts.hpp  fp16.hpp  macros.hpp
legacy_modules/quantization/include/quantization/impl/: fp4_impl.hpp  fp8_impl.hpp
legacy_modules/quantization/include/quantization/utils/: evaluation.hpp
legacy_modules/quantization/src/impl/: fp4_impl.cpp  mxfp4_impl.cpp  nf4_dq_impl.cpp  nf4_impl.cpp  q2_k_fast_impl.cpp
modules/quantization/: CMakeLists.txt
modules/quantization/include/quantization/: quantization.hpp
modules/quantization/include/quantization/datatype/: bf16.hpp
modules/quantization/include/quantization/impl/: bf16_impl.hpp  fp16_impl.hpp  mxfp4_impl.hpp  mxfp8_impl.hpp  nf4_dq_impl.hpp  nf4_impl.hpp  nvfp4_impl.hpp  q2_k_fast_impl.hpp  q2_k_impl.hpp  q4_0_impl.hpp  q8_0_impl.hpp
modules/quantization/include/quantization/utils/: random.hpp
modules/quantization/src/: quantization.cpp
modules/quantization/src/impl/: bf16_impl.cpp  fp16_impl.cpp  fp8_impl.cpp  mxfp8_impl.cpp  nvfp4_impl.cpp  q2_k_impl.cpp  q4_0_impl.cpp  q8_0_impl.cpp
modules/quantization_cuda/: CMakeLists.txt
modules/quantization_cuda/include/quantization_cuda/: quantization_cuda.cuh  quantization_method.hpp
modules/quantization_cuda/src/: quantization_cuda.cu  quantization_cuda_utils.cuh
modules/reconstruct_lowrank_cuda/: CMakeLists.txt
modules/reconstruct_lowrank_cuda/include/reconstruct_lowrank_cuda/: reconstruct_lowrank_cuda.hpp
modules/reconstruct_lowrank_cuda/src/: reconstruct_lowrank_cuda.cu
modules/svd_lowrank_cuda/: CMakeLists.txt
modules/svd_lowrank_cuda/include/svd_lowrank_cuda/: svd_lowrank_cuda.cuh  svd_lowrank_cuda.h  svd_lowrank_cuda.hpp
modules/svd_lowrank_cuda/src/: svd_lowrank_cuda.cu  svd_lowrank_cuda_utils.cuh
modules/topk/: CMakeLists.txt
modules/topk/include/: topk.cuh  topk.hpp
modules/topk/src/: topk.cpp  topk.cu  topk_utils.cuh
modules/topk_cuda/: CMakeLists.txt
modules/topk_cuda/src/: topk_cuda.cu  topk_cuda_utils.cuh
src/: bitsqz_llm.cpp  bitsqz_llm.cu
tests/: CMakeLists.txt
tests/bitsqz_llm/: test_quantization.cpp  test_svd.cpp
tests/quantization/: test_bf16_impl.cpp  test_fp16_impl.cpp  test_fp4_impl.cpp  test_fp8_impl.cpp  test_mxfp4_impl.cpp  test_mxfp8_impl.cpp  test_nf4_dq_impl.cpp  test_nf4_impl.cpp  test_nvfp4_impl.cpp  test_q2_k_fast_impl.cpp  test_q2_k_impl.cpp  test_q4_0_impl.cpp  test_q8_0_impl.cpp
tests/quantization_cuda/: test_nf4_cuda.cu  test_nf4_dq_cuda.cu
tests/reconstruct_lowrank_cuda/: test_reconstruct_lowrank_cuda.cu
tests/svd_lowrank_cuda/: test_svd_lowrank_cuda.cu  test_svd_lowrank_cuda_nsys.cu
tests/topk/: test_topk_extraction.cpp  test_topk_pack_roundtrip.cpp  test_topk_separation.cpp
tests/topk_cuda/: test_topk_cuda_extraction.cpp  test_topk_cuda_pack_roundtrip.cpp  test_topk_cuda_separation.cpp
